@@ -89,7 +89,6 @@
                 <configuration>
                     <argLine>
                         @{coverage.argLine}
-                        --enable-preview
                         --enable-native-access=ALL-UNNAMED
                         -XX:+UnlockExperimentalVMOptions
                         -XX:+UseZGC
